5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1601_2043.log
== TEST (2019-03-27 18:49:49) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())

peso1=nota1*1
peso2=nota2*2
peso3=nota3*3
peso4=nota4*4


from math import*
mediaponderada= (nota1*1+nota2*2+nota3*3+nota4*4)
print(round(media ponderada, 2))

-- ERROR:
File "XXXX", line 14
    print(round(media ponderada, 2))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:54:29) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())

peso1=1
peso2=2
peso3=3
peso4=4


from math import*
mediaponderada= (nota1*1+nota2*2+nota3*3+nota4*4) (peso1+peso2+peso3+peso4)
print(round(media ponderada, 2))

-- ERROR:
File "XXXX", line 14
    print(round(media ponderada, 2))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:57:13) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())

peso1=1
peso2=2
peso3=3
peso4=4

from math import*
mediaponderada= (nota1*1+nota2*2+nota3*3+nota4*4) (peso1+peso2+peso3+peso4)
print(round(mediapodenrada, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    mediaponderada= (nota1*1+nota2*2+nota3*3+nota4*4) (peso1+peso2+peso3+peso4)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:24:19) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())

peso1=1
peso2=2
peso3=3
peso4=4

from math import*
mediap= (nota1*1+nota2*2+nota3*3+nota4*4) (peso1+peso2+peso3+peso4)
print(round(mediapodenrada, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    mediap= (nota1*1+nota2*2+nota3*3+nota4*4) (peso1+peso2+peso3+peso4)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:25:41) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())

peso1=1
peso2=2
peso3=3
peso4=4

from math import*
mediap= (nota1*1+nota2*2+nota3*3+nota4*4) (peso1+peso2+peso3+peso4=10)
print(round(mediap, 2))
-- ERROR:
File "XXXX", line 12
    mediap= (nota1*1+nota2*2+nota3*3+nota4*4) (peso1+peso2+peso3+peso4=10)
                                              ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:25:49) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())

peso1=1
peso2=2
peso3=3
peso4=4

from math import*
mediap= (nota1*1+nota2*2+nota3*3+nota4*4) (peso1+peso2+peso3+peso4=10)
print(round(mediap, 2))
-- ERROR:
File "XXXX", line 12
    mediap= (nota1*1+nota2*2+nota3*3+nota4*4) (peso1+peso2+peso3+peso4=10)
                                              ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:26:43) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())

peso1=1
peso2=2
peso3=3
peso4=4

from math import*
mediap= (nota1*1+nota2*2+nota3*3+nota4*4) / (peso1+peso2+peso3+peso4=10)
print(round(mediap, 2))
-- ERROR:
File "XXXX", line 12
    mediap= (nota1*1+nota2*2+nota3*3+nota4*4) / (peso1+peso2+peso3+peso4=10)
                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:51:27) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())

peso1=1
peso2=2
peso3=3
peso4=4

from math import*
mediap= (nota1*1+nota2*2+nota3*3+nota4*4) (peso1+peso2+peso3+peso4)
print(round(10, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    mediap= (nota1*1+nota2*2+nota3*3+nota4*4) (peso1+peso2+peso3+peso4)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:51:56) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())

peso1=1
peso2=2
peso3=3
peso4=4

from math import*
mediap= (nota1*1+nota2*2+nota3*3+nota4*4) (peso1+peso2+peso3+peso4)
print(round(mediap, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    mediap= (nota1*1+nota2*2+nota3*3+nota4*4) (peso1+peso2+peso3+peso4)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:52:32) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
peso1=1
peso2=2
peso3=3
peso4=4

from math import*
mediap= (nota1*1+nota2*2+nota3*3+nota4*4)/(peso1+peso2+peso3+peso4)
print(round(mediap, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:53:10) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
peso1=1
peso2=2
peso3=3
peso4=4

mediap= (nota1*1+nota2*2+nota3*3+nota4*4)/(peso1+peso2+peso3+peso4)
print(round(mediap, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:53:45) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
peso1=1
peso2=2
peso3=3
peso4=4

mediap= (nota1*1+nota2*2+nota3*3+nota4*4)/(peso1+peso2+peso3+peso4)
print(round(mediap, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:54:22) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
peso1=1
peso2=2
peso3=3
peso4=4

mediap= (nota1*1+nota2*2+nota3*3+nota4*4)/(peso1+peso2+peso3+peso4)
print(round(mediap, 2))
-- EXECUTION TIME:
0.223058
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:00:28) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
peso1=1
peso2=2
peso3=3
peso4=46

mediap= (nota1*1+nota2*2+nota3*3+nota4*4)/(peso1+peso2+peso3+peso4)
print(round(mediap, 2))
-- OUTPUT:
1.58
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:00:37) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
peso1=1
peso2=2
peso3=3
peso4=46

mediap= (nota1*1+nota2*2+nota3*3+nota4*4)/(peso1+peso2+peso3+peso4)
print(round(mediap, 2))
-- EXECUTION TIME:
0.163863
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
1.58
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
1.35
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
1.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:00:45) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
peso1=1
peso2=2
peso3=3
peso4=4

mediap= (nota1*1+nota2*2+nota3*3+nota4*4)/(peso1+peso2+peso3+peso4)
print(round(mediap, 2))
-- EXECUTION TIME:
0.128157
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:05:13) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
peso1=1
peso2=2
peso3=3
peso4=4

mediap= (nota1*1+nota2*2+nota3*3+nota4*4)/(peso1+peso2+peso3+peso4)
print(round(mediap, 2))
-- EXECUTION TIME:
0.118924
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:12:22) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
peso1=1
peso2=2
peso3=3
peso4=4

mediap= (nota1*1+nota2*2+nota3*3+nota4*4)/(peso1+peso2+peso3+peso4)
print(round(mediap, 2))
-- EXECUTION TIME:
0.134321
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:00:38) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
peso1=1
peso2=2
peso3=3
peso4=4

mediap= (nota1*1+nota2*2+nota3*3+nota4*4)/(peso1+peso2+peso3+peso4)
print(round(mediap, 2))
-- EXECUTION TIME:
0.182122
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:28:02) 
-- CODE:
nota1= float(input())
nota2= float(input())
nota3= float(input())
nota4= float(input())
peso1=1
peso2=2
peso3=3
peso4=4

mediap= (nota1*1+nota2*2+nota3*3+nota4*4)/(peso1+peso2+peso3+peso4)
print(round(mediap, 2))
-- EXECUTION TIME:
0.138782
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
